--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -29,7 +29,11 @@ jobs:
       with:
         java-version: '23'
         distribution: 'temurin'
-        cache: 'gradle'
+
+    - name: Setting up Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        dependency-graph: generate-and-submit
 
     - name: Initializing CodeQL
       uses: github/codeql-action/init@v3
@@ -63,8 +67,12 @@ jobs:
       with:
         java-version: '23'
         distribution: 'temurin'
-        cache: 'gradle'
 
+    - name: Setting up Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        dependency-graph: generate-and-submit
+  
     - name: Caching SonarQube packages
       uses: actions/cache@v4
       with:
