--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,7 @@ jobs:
 
     permissions:
       actions: read
-      contents: read
+      contents: write
       security-events: write
 
     strategy:
@@ -70,8 +70,6 @@ jobs:
 
     - name: Setting up Gradle
       uses: gradle/actions/setup-gradle@v4
-      with:
-        dependency-graph: generate-and-submit
   
     - name: Caching SonarQube packages
       uses: actions/cache@v4
