--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,7 +11,7 @@ jobs:
 
     permissions:
       actions: read
-      contents: read
+      contents: write
       security-events: write
 
     strategy:
@@ -27,9 +27,13 @@ jobs:
     - name: Setting up Java
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '23'
         distribution: 'temurin'
-        cache: 'gradle'
+
+    - name: Setting up Gradle
+      uses: gradle/actions/setup-gradle@v4
+      with:
+        dependency-graph: generate-and-submit
 
     - name: Initializing CodeQL
       uses: github/codeql-action/init@v3
@@ -61,9 +65,12 @@ jobs:
     - name: Setting up Java
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '23'
         distribution: 'temurin'
 
+    - name: Setting up Gradle
+      uses: gradle/actions/setup-gradle@v4
+  
     - name: Caching SonarQube packages
       uses: actions/cache@v4
       with:
